seccion home y parte de about

--- a/Files/index.html
+++ b/Files/index.html
@@ -12,11 +12,14 @@
     <title>Dra. Cynthia Paredes</title>
 </head>
 <body>
+    <!--BURGER MENU-->
+    <div id="menu-bar" class="fas fa-bars"></div>
+    <!--BURGER MENU-->
 
     <!--SECCION HEADER INICIO-->
     <header>
         <a href="#" class="logo"><span>Dra. Cynthia</span><br>Paredes Uliambre</a>
-        <nav>
+        <nav class="navbar">
             <a href="#inicio">Inicio</a>
             <a href="#sobremi">Sobre mi</a>
             <a href="#ginecologia">Ginecologia</a>
@@ -30,8 +33,22 @@
     </header>
     <!--SECCION HEADER FIN-->
 
+    <!--SECCION HOME INICIO-->
+    <section class="home" id="inicio">
+        <div class="content">
+            <h3><span>Dra. Cynthia <br></span> Paredes Uliambre</h3>
+            <p class="info">Gineco-Obstetra y Anatomo-Patóloga</p>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ut temporibus laudantium quas fugiat dicta laboriosam quae adipisci doloremque? Fugiat eum fuga harum nihil alias ipsum earum odio rerum error.</p>
+            <a href="#sobremi" class="btn">Más Info</a>
+
+        </div>
+        <div class="image">
+            <img src="" alt="foto perfil inicio">
+        </div>
+    </section>
 
 
+    <!--SECCION HOME FIN-->
 
 
 
