--- a/Files/index.html
+++ b/Files/index.html
@@ -40,18 +40,16 @@
             <p class="info">Gineco-Obstetra y Anatomo-Patóloga</p>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ut temporibus laudantium quas fugiat dicta laboriosam quae adipisci doloremque? Fugiat eum fuga harum nihil alias ipsum earum odio rerum error.</p>
             <a href="#sobremi" class="btn">Más Info</a>
-
         </div>
         <div class="image">
             <img src="" alt="foto perfil inicio">
         </div>
     </section>
-
-
     <!--SECCION HOME FIN-->
 
+    <!--SECCION ABOUT INICIO-->
 
-
+    <!--SECCION ABOUT FIN-->
 
 
 
