cambio de lugar de archivos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar">
             <a href="#inicio">Inicio</a>
             <a href="#sobremi">Sobre mi</a>
-            <a href="#ginecologia">Ginecologia</a>
+            <a href="#atencion">Atención</a>
             <a href="#contacto">Contacto</a>
         </nav>
         <div class="follow">
@@ -48,7 +48,9 @@
     <!--SECCION HOME FIN-->
 
     <!--SECCION ABOUT INICIO-->
-
+    <section class="about" id="sobremi">
+        <h1 class="heading">Sobre <span>MI</span></h1>
+    </section>
     <!--SECCION ABOUT FIN-->
 
 
