icono de pestaña y logo en navbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
     <title>Dra. Cynthia Paredes</title>
+    <link rel="icon" type="image/x-icon" href="Files/logo oficial 2.jpeg">
 </head>
 <body>
     <!--BURGER MENU-->
@@ -18,7 +19,10 @@
 
     <!--SECCION HEADER INICIO-->
     <header>
-        <a href="#" class="logo"><span>Dra. Cynthia</span><br>Paredes Uliambre</a>
+        <a href="#" class="logo">
+            <img src="Files/logo oficial 2.jpeg" alt="brand logo">
+            <!--<span>Dra. Cynthia</span><br>Paredes Uliambre-->
+        </a>
         <nav class="navbar">
             <a href="#inicio">Inicio</a>
             <a href="#sobremi">Sobre mi</a>
