detalles en inicio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--SECCION HEADER INICIO-->
     <header>
-        <a href="#" class="logo">
+        <a href="#inicio" class="logo">
             <img src="Files/logo oficial 2.jpeg" alt="brand logo">
             <!--<span>Dra. Cynthia</span><br>Paredes Uliambre-->
         </a>
@@ -41,9 +41,11 @@
     <section class="home" id="inicio">
         <div class="content">
             <h3><span>Dra. Cynthia <br></span> Paredes Uliambre</h3>
-            <p class="info">Gineco-Obstetra y Anatomo-Patóloga</p>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ut temporibus laudantium quas fugiat dicta laboriosam quae adipisci doloremque? Fugiat eum fuga harum nihil alias ipsum earum odio rerum error.</p>
-            <a href="#sobremi" class="btn">Más Info</a>
+            <p class="info">Gineco-Obstetra y<br>Anatomo-Patóloga</p>
+            <p class="text">Como especialista médica en la mujer, sé que nos gustaría recibir un trato cercano, familiar y cariñoso, que nos escuchen y dediquen el tiempo necesario.
+            <br>Por eso te invito a conocer más de mi!
+            </p>
+            <a href="#sobremi" class="btn">Más Info ▼</a>
         </div>
         <div class="image">
             <img src="" alt="foto perfil inicio">
