cambios menores y seccion about

--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
     <!--SECCION ABOUT INICIO-->
     <section class="about" id="sobremi">
         <h1 class="heading">Sobre <span>MI</span></h1>
+
+        <div class="row-1">
+            <div class="image">
+                <img src="" alt="foto-sobre-mi">
+            </div>
+            <div class="content">
+                <h3>Titulo Titulo Titulo Titulo Titulo Titulo</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas qui at nam, voluptate magni ut, exercitationem repudiandae distinctio deserunt velit earum libero tempore ex est odit reiciendis atque iusto amet.
+                </p>
+            </div>
+        </div>
     </section>
     <!--SECCION ABOUT FIN-->
 
