--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="#contacto">Contacto</a>
         </nav>
         <div class="follow">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="fab fa-instagram"></a>
+            <a href="https://www.facebook.com/PAP-gratuito-en-Paraguay-632831063549539/" target="_blank" class="fab fa-facebook"></a>
+            <a href="https://www.instagram.com/papycolposcopiaenasuncion/" target="_blank" class="fab fa-instagram"></a>
             <a href="#" class="fab fa-whatsapp"></a>
         </div>
     </header>
@@ -62,7 +62,7 @@
                 <img src="" alt="foto-sobre-mi">
             </div>
             <div class="content">
-                <h3>Titulo Titulo Titulo Titulo Titulo Titulo</h3>
+                <h3>"Un exterior saludable comienza por tu interior"</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas qui at nam, voluptate magni ut, exercitationem repudiandae distinctio deserunt velit earum libero tempore ex est odit reiciendis atque iusto amet.
                 </p>
