cambios varios seccion about

--- a/index.html
+++ b/index.html
@@ -62,11 +62,21 @@
                 <img src="" alt="foto-sobre-mi">
             </div>
             <div class="content">
-                <h3>"Un exterior saludable comienza por tu interior"</h3>
+                <!--<h3>"Un exterior saludable comienza por tu interior"</h3>-->
+                <h3>Más de 25 años de desempeño médico profesional</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas qui at nam, voluptate magni ut, exercitationem repudiandae distinctio deserunt velit earum libero tempore ex est odit reiciendis atque iusto amet.
                 </p>
             </div>
+        </div>
+        <div class="row-2">
+            <p>
+                ▷ Doctora recibida de la Universidad Nacional de Asunción</br>
+                ▷ Maestría en Tracto Genital Inferior Femenino</br>
+                ▷ Espacialista en Ginecología y Obstetricia, y en Anatomía Patológica</br>
+                ▷ Profesora de las cátedras de Anatomía Patológica e Histología en la Universidad Nacional de Asunción y en la Universidad Católica Nuestra Señora de la Asunción</br>
+                ▷ Post-Grado en Didáctica Universitaria</br>
+            </p>
         </div>
     </section>
     <!--SECCION ABOUT FIN-->
