continuacion de la pagina, seccion contacto

--- a/index.html
+++ b/index.html
@@ -82,6 +82,39 @@
     <!--SECCION ABOUT FIN-->
 
 
+    <!--SECCION CONTACTO INICIO-->
+    <section class="contact" id="contacto">
+        <h1 class="heading">Contac<span>TO</span></h1>
+
+        <div class="icons-container">
+            <div class="icons">
+                <i class="fas fa-envelope"></i>
+                <h3>Mi Correo</h3>
+                <p>paredesuliambre@gmail.com</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-phone"></i>
+                <h3>Teléfonos</h3>
+                <p>Centro Médico y Diagnóstico Paz</p>
+                <p>+5959976593746</p>
+                <p>(021)208-866</p>
+            </div>
+
+            <div class="icons">
+                <i class="fas fa-map-marker-alt"></i>
+                <h3>Dirección</h3>
+                <p>Azara 3175 esq. J.F. Kennedy, Asunción</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2098.8491373064185!2d-57.60735812764342!3d-25.30008612532455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da87bb609c69f%3A0xe0697f7d3f5dede3!2sCentro%20Medico%20La%20Paz!5e0!3m2!1ses-419!2spy!4v1674061913608!5m2!1ses-419!2spy" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+    <!--SECCION CONTACTO FIN-->
+
+
 
 
     <script src="app.js"></script>
